--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,17 @@
         </button>
       </li>
       <li>
+        <h3>HiManshu-Portfolio</h3>
+        <span>September 2021</span>
+        <p>This is my portfolio ;)</p>
+        <button class="live">
+          <a href="https://himanshu-s-portfolio.netlify.app/">Live Project</a>
+        </button>
+        <button class="source">
+          <a href="https://github.com/05him/HiManshu-portofilo">Source code</a>
+        </button>
+      </li>
+      <li>
         <h3>Talk-Minion</h3>
         <span>December 2020</span>
         <p>Talk in the language of Minions</p>
