--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
         Hello eyeryone, this is HiManshu a web-dev enthusiast and yess this is
         my first blog.<br />
         In this blog I’m going to talk about HOISTING. For some peoples it might
-        not be the new thing but for newbies like me it is a big thing.
+        not be the new thing but for newbies like me it is a big thing.....
         <br /><br />
         <button class="read">
           <a href="hoisting.html">Click here to Read More</a>
@@ -34,13 +34,14 @@
       </p>
     </div>
     <div class="blog-div">
-      <h3>2.)Level zreo Journey</h3>
+      <h3>2.)Scope</h3>
       <p>
-        Hey welcome, This is HiManshu a web dev enthusiast . This is not any
-        kind of informational blog in this blog I’m going to tell about my level
-        zero experience for neoGCamp.<br />
+        Here in this blog we will be talking about the Scope in JavaScript. We
+        can also term scope as “variable visibility” , scope basically means
+        “The location where a variable is define indicates where we have access
+        to that variable”. Scope is basically divided into ......<br />
         <button class="read">
-          <a href="zero.html">Click here to Read More</a>
+          <a href="blog-2.html">Click here to Read More</a>
         </button>
       </p>
     </div>
