--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,18 @@
           <a href="https://github.com/05him/Stock-calculator">Source code</a>
         </button>
       </li>
+
+      <li>
+        <h3>To-Do App</h3>
+        <span>October 2021(peronal project)</span>
+        <p>Create your To-Do List by using this website made in vanila js</p>
+        <button class="live">
+          <a href="https://05him.github.io/TODO/">Live Project</a>
+        </button>
+        <button class="source">
+          <a href="https://github.com/05him/TODO">Source code</a>
+        </button>
+      </li>
     </ol>
     <footer>
       <div>Made with ❤️ by HiManshu ;)</div>
